Added Collision and Field Switching

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 
     <body>
         <canvas id="canvas"></canvas>
+        <pre
+        style="color:white">
+                      Keyboard Controls:
+            ────────────────────────────────────
+            [W] / [S]     →  Throttle
+            [A] / [D]     →  Turn (50% speed)
+            [Q] / [E]     →  Adjust Acceleration
+            [F]           →  Change Field
+            [H]           →  Toggle Telemetry
 
+                      Joystick Controls:
+            ────────────────────────────────────
+            [Left Stick]   →  Throttle
+            [Right Stick]  →  Turn
+    </pre>
         <script type="module" src="src/main.ts"></script>
     </body>
 </html>
